--- a/index.html
+++ b/index.html
@@ -350,12 +350,12 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="./images/nova.png" alt="imgprojec">
+                <img src="./images/domotik.png" alt="imgprojec">
                 <div class="portfolio-layer">
-                    <h4>Web Desing</h4>
-                    <p>NovaMC - 20% in progress
+                    <h4>Web Site</h4>
+                    <p>IQHome
                     </p>
-                    <a href="#portfolio"><i
+                    <a href="https://domotik.netbox.com.co/" target="_blank"><i
                             class='bx bx-link-external'></i></a>
                 </div>
             </div>
