--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
 
                 <textarea id="cuentanos" name="cuentanos" cols="30" rows="5" placeholder="Your Menssage"></textarea>
 
-                <button>Send Message</button>
+                <!-- <button>Send Message</button> -->
                 <div class="elemento_btn_enviar">
                     <input type="submit" value="Enviar" />
                 </div>
