--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                     <h4>Web Site</h4>
                     <p>GCLTracs
                     </p>
-                    <a href="https://gcltracs.000webhostapp.com/" target="_blank"><i
+                    <a href="https://www.gcltracs.com" target="_blank"><i
                             class='bx bx-link-external'></i></a>
                 </div>
             </div>
